Fixed explore link on mobile; fixed sizing of home info illustrations on mobile

--- a/static/react-source/src/Views/Main.scss
+++ b/static/react-source/src/Views/Main.scss
@@ -1525,7 +1525,7 @@ form                                    {margin-bottom: 1rem;
                                         border-radius: 50%;
                     @media (max-width: map-get($grid-breakpoints, sm)) {
                                         margin-left: auto;
-                                        width: 6rem;
+                                        width: 5rem;
                     }
                 }
                 h4                      {margin-bottom: 0;
